Fix menu on mobile devices and some styling issues

--- a/themes/future-imperfect/assets/css/main.css
+++ b/themes/future-imperfect/assets/css/main.css
@@ -3288,10 +3288,22 @@ input, select, textarea {
 				padding: 0 0.5em 0 0;
 			}
 
+		#header #burger {
+			display: none;
+		}
+
+		#menu .title {
+			text-align: right;
+		}
+
 		@media screen and (max-width: 980px) {
 
 			#header .links {
 				display: none;
+			}
+
+			#header #burger {
+				display: block;
 			}
 
 		}
